# igv-reports

./: .gitignore  README.md  pyproject.toml  setup.py  template_wyatt.sh
igv_reports/: generictable.py  report.py  tracks.py
igv_reports/templates/: variant_template-2.html
