[tool.poetry]
name = "igv-reports"
version = "0.1.0"
description = ""
authors = ["Wilson Tu <s31302@example.com>"]
readme = "README.md"
packages = [{include = "igv_reports"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
